// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Polygon /> Don't render any path when points is empty or null 1`] = `
<div>
  <svg
    class="recharts-surface"
    height="400"
    viewBox="0 0 400 400"
    width="400"
  >
    <title />
    <desc />
  </svg>
</div>
`;

exports[`<Polygon /> Render 1 path in simple Polygon 1`] = `
<div>
  <svg
    class="recharts-surface"
    height="400"
    viewBox="0 0 400 400"
    width="400"
  >
    <title />
    <desc />
    <path
      class="recharts-polygon"
      d="M100,300L300,300L200,50L100,300Z"
      fill="#ff7300"
    />
  </svg>
</div>
`;
